--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -136,49 +136,49 @@
 <p class="NoIndent">A corpse converses with you briefly. It will answer any three questions you pose to it to the best of the knowledge it had in life and the knowledge it gained in death.</p></div>
 <hr/>
 <div><h1>等級3 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Animate Dead<span class="Tags">	Level 3	, 持續</span></h3>
+<div class="Spell"><h3 class="SpellName">活化死屍 (Animate Dead)<span class="Tags">	Level 3	, 持續</span></h3>
 <p class="NoIndent">You invoke a hungry spirit to possess a recently-dead body and serve you. This creates a zombie that follows your orders to the best of its limited abilities. Treat the zombie as a character, but with access to only the basic moves. It has a +1 modifier for all stats and 1 HP. The zombie also gets your choice of 1d4 of these traits:</p>
 <ul><li>It’s talented. Give one stat a +2 modifier.</li>
 <li>It’s durable. It has +2 HP for each level you have.</li>
 <li>It has a functioning brain and can complete complex tasks.</li>
 <li>It does not appear obviously dead, at least for a day or two.</li></ul>
 <p class="NoIndent">The zombie lasts until it is destroyed by taking damage in excess of its HP, or until you end the spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Cure Moderate Wounds<span class="Tags">	Level 3</span></h3>
+<div class="Spell"><h3 class="SpellName">治療中傷 (Cure Moderate Wounds)<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">You staunch bleeding and set bones through magic. Heal an ally you touch of 2d8 damage.</p></div>
-<div class="Spell"><h3 class="SpellName">Darkness<span class="Tags">	Level 3	, 持續</span></h3>
+<div class="Spell"><h3 class="SpellName">黑暗術 (Darkness)<span class="Tags">	Level 3	, 持續</span></h3>
 <p class="NoIndent">Choose an area you can see: it’s filled with supernatural darkness and shadow. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Resurrection<span class="Tags">	Level 3</span></h3>
+<div class="Spell"><h3 class="SpellName">復活術 (Resurrection)<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Tell the GM you would like to resurrect a corpse whose soul has not yet fully departed this world. Resurrection is always possible, but the GM will give you one or more (possibly all) of these conditions to fulfill:</p>
 <ul><li>It’s going to take days/weeks/months</li>
 <li>You must get help from ____</li>
 <li>It will require a lot of money</li>
 <li>You must sacrifice ____ to do it</li></ul>
 <p class="NoIndent">The GM may, depending on the circumstances, allow you to resurrect the corpse now, with the understanding that the conditions must be met before it’s permanent, or require you to meet the conditions before the corpse is resurrected.</p> </div>
-<div class="Spell"><h3 class="SpellName">Hold Person<span class="Tags">	Level 3</span></h3>
+<div class="Spell"><h3 class="SpellName">人類定身術 (Hold Person)<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Choose a person you can see. Until you cast a spell or leave their presence they cannot act except to speak. This effect ends immediately if the target takes damage from any source.</p></div>
 <hr/>
 <div><h1>等級5 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Revelation<span class="Tags">	Level 5</span></h3>
+<div class="Spell"><h3 class="SpellName">啟示 (Revelation)<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Your deity answers your prayers with a moment of perfect understanding. The GM will shed light on the current situation. When acting on the information, you take +1 forward.</p></div>
-<div class="Spell"><h3 class="SpellName">Cure Critical Wounds<span class="Tags">	Level 5</span></h3>
+<div class="Spell"><h3 class="SpellName">治療重傷 (Cure Critical Wounds)<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Heal an ally you touch of 3d8 damage.</p></div>
-<div class="Spell"><h3 class="SpellName">Divination<span class="Tags">	Level 5</span></h3>
+<div class="Spell"><h3 class="SpellName">預言術 (Divination)<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">Name a person, place, or thing you want to learn about. Your deity grants you visions of the target, as clear as if you were there.</p></div>
-<div class="Spell"><h3 class="SpellName">Contagion<span class="Tags">	Level 5	, 持續</span></h3>
+<div class="Spell"><h3 class="SpellName">疫病術 (Contagion)<span class="Tags">	Level 5	, 持續</span></h3>
 <p class="NoIndent">Choose a creature you can see. Until you end this spell, the target suffers from a disease of your choice. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Words of the Unspeaking<span class="Tags">	Level 5</span></h3>
+<div class="Spell"><h3 class="SpellName">無語者之語 (Words of the Unspeaking)<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">With a touch you speak to the spirits within things. The non-living object you touch answers three questions you pose, as best it can.</p></div>
-<div class="Spell"><h3 class="SpellName">True Seeing<span class="Tags">	Level 5	, 持續</span></h3>
+<div class="Spell"><h3 class="SpellName">真知術 (True Seeing)<span class="Tags">	Level 5	, 持續</span></h3>
 <p class="NoIndent">Your vision is opened to the true nature of everything you lay your eyes on. You pierce illusions and see things that have been hidden. The GM will describe the area before you ignoring any illusions and falsehoods, magical or otherwise. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Trap Soul<span class="Tags">	Level 5</span></h3>
+<div class="Spell"><h3 class="SpellName">錮魂術 (Trap Soul)<span class="Tags">	Level 5</span></h3>
 <p class="NoIndent">You trap the soul of a dying creature within a gem. The trapped creature is aware of its imprisonment but can still be manipulated through spells, parley, and other effects. All moves against the trapped creature are at +1. You can free the soul at any time but it can never be recaptured once freed.</p></div>
 <hr/>
 <div><h1>等級7 法術</h1></div>
 <div class="Spell"><h3 class="SpellName">Word of Recall<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Choose a word. The first time after casting this spell that you speak the chosen word, you and any allies touching you when you cast the spell are immediately returned to the exact spot where you cast the spell. You can only maintain a single location; casting Word of Recall again before speaking the word replaces the earlier spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Heal<span class="Tags">	Level 7</span></h3>
+<div class="Spell"><h3 class="SpellName">治癒術 (Heal)<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Touch an ally and you may heal their damage a number of points up to your maximum HP.</p></div>
-<div class="Spell"><h3 class="SpellName">Harm<span class="Tags">	Level 7</span></h3>
+<div class="Spell"><h3 class="SpellName">傷害術 (Harm)<span class="Tags">	Level 7</span></h3>
 <p class="NoIndent">Touch an enemy and strike them with divine wrath—deal 2d8 damage to them and 1d6 damage to yourself. This damage ignores armor.</p></div>
 <div class="Spell"><h3 class="SpellName">Sever<span class="Tags">	Level 7	, 持續</span></h3>
 <p class="NoIndent">Choose an appendage on the target such as an arm, tentacle, or wing. The appendage is magically severed from their body, causing no damage but considerable pain. Missing an appendage may, for example, keep a winged creature from flying, or a bull from goring you on its horns. While this spell is ongoing you take -1 to cast a spell.</p></div>
