--- a/classes/wizard/spells/index.html
+++ b/classes/wizard/spells/index.html
@@ -112,54 +112,54 @@
              <div class="pseudoTitle">法師法術</div>
 <div><h1>戲法</h1>
 <p class="NoIndent">You prepare all of your cantrips every time you prepare spells without having to select them or count them toward your allotment of spells.</p>
-<div class="Spell"><h3 class="SpellName">Light<span class="Tags">	Cantrip</span></h3>
+<div class="Spell"><h3 class="SpellName">光亮術 (Light)<span class="Tags">	戲法</span></h3>
 <p class="NoIndent">An item you touch glows with arcane light, about as bright as a torch. It gives off no heat or sound and requires no fuel, but it is otherwise like a mundane torch. You have complete control of the color of the flame. The spell lasts as long as it is in your presence.</p></div>
-<div class="Spell"><h3 class="SpellName">Unseen Servant<span class="Tags">	Cantrip , Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">隱形僕役 (Unseen Servant)<span class="Tags">	戲法 , Ongoing</span></h3>
 <p class="NoIndent">You conjure a simple invisible construct that can do nothing but carry items. It has load 3 and carries anything you hand to it. It cannot pick up items on its own and can only carry those you give to it. Items carried by an unseen servant appear to float in the air a few paces behind you. An unseen servant that takes damage or leaves your presence is immediately dispelled, dropping any items it carried. Otherwise the unseen servant serves you until you end the spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Prestidigitation<span class="Tags">	Cantrip</span></h3>
+<div class="Spell"><h3 class="SpellName">魔法技倆 (Prestidigitation)<span class="Tags">	戲法</span></h3>
 <p class="NoIndent">You perform minor tricks of true magic. If you touch an item as part of the casting you can make cosmetic changes to it: clean it, soil it, cool it, warm it, flavor it, or change its color. If you cast the spell without touching an item you can instead create minor illusions no bigger than yourself. Prestidigitation illusions are crude and clearly illusions—they won’t fool anyone, but they might entertain them.</p></div>
 <hr/>
 <div><h1>等級1 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Contact Spirits<span class="Tags">	Level 1	, Summoning</span></h3>
+<div class="Spell"><h3 class="SpellName">接觸靈體 (Contact Spirits)<span class="Tags">	Level 1	, 召喚系</span></h3>
 <p class="NoIndent">Name the spirit you wish to contact (or leave it to the GM). You pull that creature through the planes, just close enough to speak to you. It is bound to answer any one question you ask to the best of its ability.</p></div>
-<div class="Spell"><h3 class="SpellName">Detect Magic<span class="Tags">	Level 1	, Divination</span></h3>
+<div class="Spell"><h3 class="SpellName">偵測魔法 (Detect Magic)<span class="Tags">	Level 1	, 預言系</span></h3>
 <p class="NoIndent">One of your senses is briefly attuned to magic. The GM will tell you what here is magical.</p></div>
-<div class="Spell"><h3 class="SpellName">Telepathy<span class="Tags">	Level 1	, Divination Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">心靈感應 (Telepathy)<span class="Tags">	Level 1	, 預言系, Ongoing</span></h3>
 <p class="NoIndent">You form a telepathic bond with a single person you touch, enabling you to converse with that person through your thoughts. You can only have one telepathic bond at a time.</p></div>
-<div class="Spell"><h3 class="SpellName">Charm Person<span class="Tags">	Level 1	, Enchantment, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">魅惑人類 (Charm Person)<span class="Tags">	Level 1	, 附魔系, Ongoing</span></h3>
 <p class="NoIndent">The person (not beast or monster) you touch while casting this spell counts you as a friend until they take damage or you prove otherwise.</p></div>
-<div class="Spell"><h3 class="SpellName">Invisibility<span class="Tags">	Level 1	, Illusion, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">隱形術 (Invisibility)<span class="Tags">	Level 1	, 幻術系, Ongoing</span></h3>
 <p class="NoIndent">Touch an ally: nobody can see them. They’re invisible! The spell persists until the target attacks or you dismiss the effect. While the spell is ongoing you can’t cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Magic Missile<span class="Tags">	Level 1	, Evocation</span></h3>
+<div class="Spell"><h3 class="SpellName">魔法飛彈 (Magic Missile)<span class="Tags">	Level 1	, 塑能系</span></h3>
 <p class="NoIndent">Projectiles of pure magic spring from your fingers. Deal 2d4 damage to one target.</p></div>
-<div class="Spell"><h3 class="SpellName">Alarm<span class="Tags">	Level 1</span></h3>
+<div class="Spell"><h3 class="SpellName">警報術 (Alarm)<span class="Tags">	Level 1</span></h3>
 <p class="NoIndent">Walk a wide circle as you cast this spell. Until you prepare spells again your magic will alert you if a creature crosses that circle. Even if you are asleep, the spell will shake you from your slumber.</p></div>
 <hr/>
 <div><h1>等級3 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Dispel Magic<span class="Tags">	Level 3</span></h3>
+<div class="Spell"><h3 class="SpellName">解除魔法 (Dispel Magic)<span class="Tags">	Level 3</span></h3>
 <p class="NoIndent">Choose a spell or magic effect in your presence: this spell rips it apart. Lesser spells are ended, powerful magic is just reduced or dampened so long as you are nearby.</p></div>
-<div class="Spell"><h3 class="SpellName">Visions Through Time<span class="Tags">	Level 3	, Divination</span></h3>
+<div class="Spell"><h3 class="SpellName">視透時間 (Visions Through Time)<span class="Tags">	Level 3	, 預言系</span></h3>
 <p class="NoIndent">Cast this spell and gaze into a reflective surface to see into the depths of time. The GM will reveal the details of a grim portent to you—a bleak event that will come to pass without your intervention. They’ll tell you something useful about how you can interfere with the grim portent’s dark outcomes. Rare is the portent that claims “You’ll live happily ever after.” Sorry.</p></div>
-<div class="Spell"><h3 class="SpellName">Fireball<span class="Tags">	Level 3	, Evocation</span></h3>
+<div class="Spell"><h3 class="SpellName">火球術 (Fireball)<span class="Tags">	Level 3	, 塑能系</span></h3>
 <p class="NoIndent">You evoke a mighty ball of flame that envelops your target and everyone nearby, inflicting 2d6 damage which ignores armor.</p></div>
-<div class="Spell"><h3 class="SpellName">Mimic<span class="Tags">	Level 3	, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">擬形術 (Mimic)<span class="Tags">	Level 3	, Ongoing</span></h3>
 <p class="NoIndent">You take the form of someone you touch while casting this spell. Your physical characteristics match theirs exactly but your behavior may not. This change persists until you take damage or choose to return to your own form. While this spell is ongoing you lose access to all your wizard moves.</p></div>
-<div class="Spell"><h3 class="SpellName">Mirror Image<span class="Tags">	Level 3	, Illusion</span></h3>
+<div class="Spell"><h3 class="SpellName">鏡影術 (Mirror Image)<span class="Tags">	Level 3	, 幻術系</span></h3>
 <p class="NoIndent">You create an illusory image of yourself. When you are attacked, roll a d6. On a 4, 5, or 6 the attack hits the illusion instead, the image then dissipates and the spell ends.</p></div>
-<div class="Spell"><h3 class="SpellName">Sleep<span class="Tags">	Level 3	, Enchantment</span></h3>
+<div class="Spell"><h3 class="SpellName">睡眠術 (Sleep)<span class="Tags">	Level 3	, 附魔系</span></h3>
 <p class="NoIndent">1d4 enemies you can see of the GM’s choice fall asleep. Only creatures capable of sleeping are affected. They awake as normal: loud noises, jolts, pain.</p></div>
 <hr/>
 <div><h1>等級5 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Cage<span class="Tags">	Level 5	, Evocation, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">力場監牢 (Cage)<span class="Tags">	Level 5	, 塑能系, Ongoing</span></h3>
 <p class="NoIndent">The target is held in a cage of magical force. Nothing can get in or out of the cage. The cage remains until you cast another spell or dismiss it. While the spell is ongoing, the caged creature can hear your thoughts and you cannot leave sight of the cage.</p></div>
-<div class="Spell"><h3 class="SpellName">Contact Other Plane<span class="Tags">	Level 5	, Divination</span></h3>
+<div class="Spell"><h3 class="SpellName">異界探知 (Contact Other Plane)<span class="Tags">	Level 5	, 預言系</span></h3>
 <p class="NoIndent">You send a request to another plane. Specify who or what you’d like to contact by location, type of creature, name, or title. You open a two-way communication with that creature. Your communication can be cut off at any time by you or the creature you contacted.</p></div>
-<div class="Spell"><h3 class="SpellName">Polymorph<span class="Tags">	Level 5	, Enchantment</span></h3>
+<div class="Spell"><h3 class="SpellName">變形術 (Polymorph)<span class="Tags">	Level 5	, 附魔系</span></h3>
 <p class="NoIndent">Your touch reshapes a creature entirely, they stay in the form you craft until you cast a spell. Describe the new shape you craft, including any stat changes, significant adaptations, or major weaknesses. The GM will then tell you one or more of these:</p>
 <ul><li>The form will be unstable and temporary</li>
 <li>The creature’s mind will be altered as well</li>
 <li>The form has an unintended benefit or weakness</li></ul></div>
-<div class="Spell"><h3 class="SpellName">Summon Monster<span class="Tags">	Level 5	, Summoning, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">怪物召喚術 (Summon Monster)<span class="Tags">	Level 5	, 召喚系, Ongoing</span></h3>
 <p class="NoIndent">A monster appears and aids you as best it can. Treat it as your character, but with access to only the basic moves. It has +1 modifier for all stats, 1 HP, and uses your damage dice. The monster also gets your choice of 1d6 of these traits: </p>
 <ul><li>It has +2 instead of +1 to one stat</li>
 <li>It’s not reckless</li>
@@ -169,32 +169,32 @@
 <p class="NoIndent">The GM will tell you the type of monster you get based on the traits you select. The creature remains on this plane until it dies or you dismiss it. While the spell is ongoing you take -1 to cast a spell.</p></div>
 <hr/>
 <div><h1>等級7 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Dominate<span class="Tags">	Level 7	, Enchantment, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">支配術 (Dominate)<span class="Tags">	Level 7	, 附魔系, Ongoing</span></h3>
 <p class="NoIndent">Your touch pushes your mind into someone else’s. You gain 1d4 hold. Spend one hold to make the target take one of these actions:</p>
 <ul><li>Speak a few words of your choice</li>
 <li>Give you something they hold</li>
 <li>Make a concerted attack on a target of your choice</li>
 <li>Truthfully answer one question</li></ul>
 <p class="NoIndent">If you run out of hold the spell ends. If the target takes damage you lose 1 hold. While the spell is ongoing you cannot cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">True Seeing<span class="Tags">	Level 7	, Divination, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">真知術 (True Seeing)<span class="Tags">	Level 7	, 預言系, Ongoing</span></h3>
 <p class="NoIndent">You see all things as they truly are. This effect persists until you tell a lie or dismiss the spell. While this spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Shadow Walk<span class="Tags">	Level 7	, Illusion</span></h3>
+<div class="Spell"><h3 class="SpellName">行影術 (Shadow Walk)<span class="Tags">	Level 7	, 幻術系</span></h3>
 <p class="NoIndent">The shadows you target with this spell become a portal for you and your allies. Name a location, describing it with a number of words up to your level. Stepping through the portal deposits you and any allies present when you cast the spell at the location you described. The portal may only be used once by each ally.</p></div>
-<div class="Spell"><h3 class="SpellName">Contingency<span class="Tags">	Level 7, Evocation</span></h3>
+<div class="Spell"><h3 class="SpellName">觸發術 (Contingency)<span class="Tags">	Level 7, 塑能系</span></h3>
 <p class="NoIndent">Choose a 5th level or lower spell you know. Describe a trigger condition using a number of words equal to your level. The chosen spell is held until you choose to unleash it or the trigger condition is met, whichever happens first. You don’t have to roll for the held spell, it just takes effect. You may only have a single contingent spell held at a time; if you cast Contingency while you have a held spell, the new held spell replaces the old one.</p></div>
-<div class="Spell"><h3 class="SpellName">Cloudkill<span class="Tags">	Level 7, Summoning, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">死雲術 (Cloudkill)<span class="Tags">	Level 7, 召喚系, Ongoing</span></h3>
 <p class="NoIndent">A cloud of fog drifts into this realm from beyond the Black Gates of Death, filling the immediate area. Whenever a creature in the area takes damage it takes an additional, separate 1d6 damage which ignores armor. This spell persists so long as you can see the affected area, or until you dismiss it.</p></div>
 <hr/>
 <div><h1>等級9 法術</h1></div>
-<div class="Spell"><h3 class="SpellName">Antipathy<span class="Tags">	Level 9, Enchantment, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">嫌惡術 (Antipathy)<span class="Tags">	Level 9, 附魔系, Ongoing</span></h3>
 <p class="NoIndent">Choose a target and describe a type of creature or an alignment. Creatures of the specified type or alignment cannot come within sight of the target. If a creature of the specified type does find itself within sight of the target, it immediately flees. This effect continues until you leave the target’s presence or you dismiss the spell. While the spell is ongoing you take -1 to cast a spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Alert<span class="Tags">	Level 9, Divination</span></h3>
+<div class="Spell"><h3 class="SpellName">預警術 (Alert)<span class="Tags">	Level 9, 預言系</span></h3>
 <p class="NoIndent">Describe an event. The GM will tell you when that event occurs, no matter where you are or how far away the event is. If you choose, you can view the location of the event as though you were there in person. You can only have one Alert active at a time.</p></div>
-<div class="Spell"><h3 class="SpellName">Soul Gem<span class="Tags">	Level 9</span></h3>
+<div class="Spell"><h3 class="SpellName">囚魂寶石 (Soul Gem)<span class="Tags">	Level 9</span></h3>
 <p class="NoIndent">You trap the soul of a dying creature within a gem. The trapped creature is aware of its imprisonment but can still be manipulated through spells, parley, and other effects. All moves against the trapped creature are at +1. You can free the soul at any time but it can never be recaptured once freed.</p></div>
-<div class="Spell"><h3 class="SpellName">Shelter<span class="Tags">	Level 9, Evocation, Ongoing</span></h3>
+<div class="Spell"><h3 class="SpellName">庇護所 (Shelter)<span class="Tags">	Level 9, 塑能系, Ongoing</span></h3>
 <p class="NoIndent">You create a structure out of pure magical power. It can be as large as a castle or as small as a hut, but is impervious to all non-magical damage. The structure endures until you leave it or you end the spell.</p></div>
-<div class="Spell"><h3 class="SpellName">Perfect Summons<span class="Tags">	Level 9, Summoning</span></h3>
+<div class="Spell"><h3 class="SpellName">完美召喚術 (Perfect Summons)<span class="Tags">	Level 9, 召喚系</span></h3>
 <p class="NoIndent">You teleport a creature to your presence. Name a creature or give a short description of a type of creature. If you named a creature, that creature appears before you. If you described a type of creature, a creature of that type appears before you.</p></div></div>
 
           </div>
