--- a/character_creation/index.html
+++ b/character_creation/index.html
@@ -113,9 +113,9 @@
 <p class="NoIndent">
   創造地城世界中的角色相當簡單且快速。在你們的第一次聚會開始時，每個人都會一起創造自己的第一個角色。就跟這個遊戲的進行方式一樣，角色創造的過程就是一種對話，每個人都應該在場。</p>
 <p>
-  有時候，你可能會需要在遊戲期間創造一名新的角色，比如說當原本的角色被殺死的時候。如果是這樣的話，不用擔心，你只需要幾分鐘的時間就可以創造出能夠融入團隊的新角色。所有被創造出來的新角色，包括替換進來的角色，都必須從等級一開始。</p>
+  有時候，你可能會需要在遊戲期間創造一名新的角色，比如說在原本的角色被殺死的時候。如果是這樣的話，不用擔心，你只需要幾分鐘的時間就可以創造出能夠融入團隊的新角色。所有被創造出來的新角色，包括替換進來的角色，都必須從等級一開始。</p>
 <p>
-  你創造角色所需要的大部分資訊都被記在角色卡上。下列的步驟將帶領你依序填妥角色卡的內容。</p>
+  你創造角色所需要的大部分資訊都被記在角色卡上。下列的步驟將帶領你依序填妥角色卡上的內容。</p>
 
 <h2>1. 選擇職業 (Choose a Class)</h2>
 <p>查看所有的角色職業，並從中選擇一個你感興趣的職業。讓每個玩家選擇不同的職業；一場遊戲中可不能同時出現兩名法師。如果有兩個玩家想要選擇同一個的職業，請他們像成熟大人一樣好好討論並協商。</p>
@@ -214,7 +214,7 @@
 <h2>8. 選擇起始動作 (Choose Starting Moves)</h2>
 <p>每個職業的角色卡正面都會列出它們各自的起始動作。有些職業，比如說戰士，所擁有的某些起始動作會需要玩家進行一些選擇，請在這個時候做好決定。法師會需要選擇法術來記入他的法術書中。牧師和法師也都需要事先選擇他們在遊戲開始時已經準備好的法術。</p>
 <p class="Example">
-  <em>召喚系</em>的法術是個必然的選擇，因此我選了<b>接觸靈體(Contact Spirits)</b>法術。相比法師職業原本那可悲的 d4傷害骰，<b>魔法飛彈(Magic Missile)</b>能讓我造成更多的傷害，所以我也選了這個法術。我選擇<b>警報術(Alarm)</b>作為我最後的法術，因為我已經想到了一些關於這麼法術的有趣用法。</p>
+  <em>召喚系</em>的法術是個必然的選擇，因此我選了<b>接觸靈體(Contact Spirits)</b>法術。相比法師職業原本那可悲的 d4傷害骰，<b>魔法飛彈(Magic Missile)</b>能讓我造成更多的傷害，所以我也選了這個法術。我選擇<b>警報術(Alarm)</b>作為我最後的法術，因為我已經想到了一些關於這個法術的有趣用法。</p>
 
 <h2>9. 選擇陣營 (Choose Alignment)</h2>
 <p> 你的陣營是一段描述著你角色道德觀的簡短字句。每個職業只能從某些特定陣營中選擇。從中選擇你的陣營──這能讓你的角色在遊戲中做出特定行動時，讓你獲得額外的經驗值。</p>
