--- a/moves/index.html
+++ b/moves/index.html
@@ -120,7 +120,7 @@
 <p class="NoIndent">
 	當你<strong>瞄準並射擊遠方的敵人</strong>時，擲+敏捷。<br/>
 	✴擲出10+時，你成功命中目標－－造成你的傷害。<br/>
-	✴擲出7-9時，選擇下列一項（無論選擇哪一項，你都可以對其造成傷害）：</p>
+	✴擲出7-9時，選擇下列一項（無論選擇哪一項，你都可以如常造成傷害）：</p>
 <ul>
 	<li>你必須移動位置才能射中目標，這將使你置身GM所決定的危險當中。</li>
 	<li>你必須妥協：-1d6傷害。</li>
