--- a/moves/index.html
+++ b/moves/index.html
@@ -114,7 +114,7 @@
 <p class="NoIndent">
 	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
 	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
-	✴擲出7-9時，你對敵人造成傷害，且敵人對你進行攻擊。</p></div>
+	✴擲出7-9時，你對敵人造成傷害，但敵人的攻擊也擊中了你。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">射擊 (Volley)</h2>
 <p class="NoIndent">
@@ -156,15 +156,15 @@
 <p class="NoIndent">
 	當你<strong>回憶自己積累下來，關於某個事物的知識</strong>時，擲+智力。<br/>
 	✴擲出10+時，GM會就你的情況告訴你一件有趣且有用的情報。<br/>
-	✴擲出7-9時，GM只會告訴你一件有趣的情報－－你必須自己設法讓它派上用場。
+	✴擲出7-9時，GM只會告訴你一件有趣的情報－－你必須自己設法讓它派上用場。<br/>
 	GM可能會詢問你「你是怎麼知道的？」現在，陳述事實吧。</p></div>
 
 <div class="Move"><h2 class="BasicMoveName">審視現狀 (Discern Realities)</h2>
 <p class="NoIndent">
 	當你<strong>仔細地研究一個情景或人物</strong>時，擲+睿知：<br/>
 	✴擲出10+時，從下列清單中選擇三個問題詢問GM。<br/>
-	✴擲出7-9時，則只能詢問一個問題。
-	當依據答案而採取行動時，獲得下次+1。</p>
+	✴擲出7-9時，則只能詢問一個問題。<br/>
+	無論詢問幾個問題，當依據答案而採取行動時，獲得下次+1。</p>
 <ul>
 	<li>這裡最近發生了什麼事？</li>
 	<li>這裡有什麼即將發生？</li>
