--- a/playing_the_game/index.html
+++ b/playing_the_game/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="tw">
   <head>
-  <title>Playing the Game | 地城世界 HTML SRD</title>
+  <title>進行遊戲 | 地城世界 HTML SRD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link href="https://hazmole.github.io/Dungeon-World-HTML-SRD-release/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -110,17 +110,32 @@
        <div class="row">
           <div class="col-md-8 col-md-offset-1">
              
-<h1>Playing the Game</h1>
-<p class="NoIndent">Playing Dungeon World means having a conversation; somebody says something, then you reply, maybe someone else chimes in. We talk about the fiction—the world of the characters and the things that happen around them. As we play, the rules will chime in, too. They have something to say about the world. There are no turns or rounds in Dungeon World, no rules to say whose turn it is to talk. Instead players take turns in the natural flow of the conversation, which always has some back-and-forth. The GM says something, the players respond. The players ask questions or make statements, the GM tells them what happens next. Dungeon World is never a monologue; it’s always a conversation.</p>
-<p>The rules help shape the conversation of play. While the GM and the players are talking, the rules and the fiction are talking, too. Every rule has an explicit fictional trigger that tells you when it is meant to come into the conversation.</p>
-<p>Like any conversation, the time you spend listening is just as important as the time you spend talking. The details established by the other people at the table (the GM and the other players) are important to you: they might change what moves you can make, set up an opportunity for you, or create a challenge you have to face. The conversation works best when we all listen, ask questions, and build on each other’s contributions.</p>
-<p>This chapter is all about how to play Dungeon World. Here, you’ll find information about the rules—how they arise from and contribute to the game. We’ll cover both general rules, like making moves, and more specific rules, like those for dealing with damage and hit points.</p>
-<h3>Ability Scores and Modifiers</h3>
-<p class="NoIndent">Many of the rules discussed in this chapter rely on a player character’s abilities and their modifiers. The abilities are Strength, Constitution, Dexterity, Intelligence, Wisdom, and Charisma. They measure a player character’s raw ability in each of those areas on a scale from 3 to 18, where 18 is the peak of mortal ability.</p>
-<p>Each ability has a modifier associated with it that is used when rolling with that ability. These are written as three-letter abbreviations: Str, Con, Dex, Int, Wis, Cha. Modifiers range from -3 to +3. The modifier is always derived from the current ability score.</p>
-<h2>Making Moves</h2>
-<p class="NoIndent">The most basic unit of rules in Dungeon World is the move. A move looks like this:</p>
-<p class="MoveOneLine">When you <strong>attack an enemy in melee</strong>, roll+Str. ✴On a 10+, you deal your damage to the enemy and avoid their attack. At your option, you may choose to do +1d6 damage but expose yourself to the enemy’s attack. ✴On a 7–9, you deal your damage to the enemy and the enemy makes an attack against you.</p>
+<h1>進行遊戲</h1>
+<p class="NoIndent">
+	地城世界的遊戲過程就是一場對話；某個人說了些什麼，而你給予回覆，然後或許其他人會跟著插話。我們在談話中建立故事──我們建立出角色所身處的世界，以及圍繞著他們所發生的種種事件。當我們在進行遊戲時，規則也會不時跳進來影響世界的運作。在地城世界中並沒有回合或行動輪的概念，沒有規則去決定現在輪到誰說話，而是讓玩家們在自然流暢的對話中輪流開口，並總是保持著一來一往的節奏：GM描述情境，然後玩家做出回應；玩家詢問問題或做出描述，然後GM訴說接下來的發展。地城世界永遠不會是獨角戲；它永遠都是一場對話。</p>
+<p>
+	規則有助於形成遊戲中的對話。當GM和玩家在彼此對話的同時，規則與故事也在說話。每條規則都有著一個明確的敘事觸發條件，用來告訴你這條規則會在什麼時候進入對話當中。</p>
+<p>
+	就跟所有的對話一樣，你花在聆聽上的時間與你花在說話上的時間一樣重要。遊戲中其他人（GM與其他玩家）所建立的故事細節對你而言相當重要：它們可能會影響你所能進行的動作、為你製造良機、或創造出你必須面對的挑戰。當我們所有人都能夠聆聽、提問、並在彼此建立的貢獻上發展時，對話才能發揮它最好的成效。</p>
+<p>
+	本章節旨在說明該如何進行地城世界的遊戲。你將讀到關於規則的所有資訊──它們該如何使用，且會對遊戲造成什麼樣的貢獻。我們會在這裡說明所有的通用規則，比如說進行動作的方法，以及其他在更特定情況下會使用的特殊規則，像是傷害與生命值的處理等等。</p>
+
+<h3>屬性值與調整值</h3>
+<p class="NoIndent">
+	本章中所提及的許多規則都依賴著玩家角色的屬性及其調整值。六項屬性分別為：力量、體質、敏捷、智力、睿知、魅力。它們代表了角色在各個領域的能力，範圍從 3 至 18，其中 18 代表著凡人所能達到的極限。</p>
+<p>
+	每項屬性都有一個相應的調整值，這個調整值會在使用該屬性進行的擲骰檢定時被使用。為了方便辨識，本站中將以各屬性的名稱直接代指該屬性的調整值（例如+力量，代表著加上力量屬性的調整值），並使用屬性值來代表屬性本身的數值（例如+體質值，代表加上體質屬性本身的數值）。調整值的範圍從 -3 至 +3，調整值永遠都是從當下的屬性值進行換算而得。</p>
+<hr/>
+
+
+<h2>進行動作</h2>
+<p class="NoIndent">在地城世界的規則中，最基本單位就是「動作」。一個動作看起來會像這樣：</p>
+<div class="Move">
+<p class="NoIndent">
+	當你<strong>以近戰肉搏攻擊敵人</strong>時，擲+力量。<br/>
+	✴擲出10+時，你對敵人造成傷害並避開其攻擊。你也可以選擇造成額外+1d6傷害，但將自己暴露在敵人的攻擊之下。<br/>
+	✴擲出7-9時，你對敵人造成傷害，但敵人的攻擊也擊中了你。</p></div>
+
 <p class="NoIndent">Moves are rules that tell you when they trigger and what effect they have. A move depends on a fictional action and always has some fictional effect. “Fictional” means that the action and effect come from the world of the characters we’re describing. In the move above the trigger is “when you attack an enemy in melee.” The effect is what follows: a roll to be made and differing fictional effects based on the outcome of the roll.</p>
 <p>When a player describes their character doing something that triggers a move, that move happens and its rules apply. If the move requires a roll, its description will tell you what dice to roll and how to read their results.</p>
 <p>A character can’t take the fictional action that triggers a move without that move occurring. For example, if Isaac tells the GM that his character dashes past a crazed axe-wielding orc to the open door, he makes the defy danger move because its trigger is “when you act despite an imminent threat.” Isaac can’t just describe his character running past the orc without making the defy danger move and he can’t make the defy danger move without acting despite an imminent threat or suffering a calamity. The moves and the fiction go hand-in-hand.</p>
@@ -149,7 +164,10 @@
 <p>…Present a choice. The choice you make, like all move effects, dictates things that happen in the fiction in addition to any more mechanical effects. The choice you make on the 10+ result of hack and slash to deal more damage at the cost of opening yourself up is exactly what’s happening to your character: they have enough advantage that they can stay safe or push their luck.</p>
 <p>…Give you a chance to say something about your character and their history. When you spout lore you may get asked how you know the information that the GM reveals. Take that opportunity to contribute to the game and show who your character really is. Just keep in mind the established facts and don’t contradict anything that’s already been described.</p>
 <p>…Say “mark XP.” That means you add one to your current XP total.</p>
-<h2>Harm and Healing</h2>
+<hr/>
+
+
+<h2>傷害與治療 (Harm and Healing)</h2>
 <p class="NoIndent">Cuts, bruises, and mortal wounds are common dangers for adventurers to face in Dungeon World. In the course of play, characters will take damage, heal, and maybe even die. A character’s health is measured by their hit points (HP). Damage subtracts from HP. In the right conditions, or with medical or magical help, damage is healed and HP is restored.</p>
 <h3>HP</h3>
 <p class="NoIndent">A character’s HP is a measure of their stamina, endurance, and health. More HP means the character can fight longer and endure more trauma before facing Death’s cold stare.</p>
@@ -207,7 +225,10 @@
 <p>You can only have each debility once. If you’re already Sick and something makes you Sick you just ignore it.</p>
 <p>Debilities are harder to heal than HP. Some high level magic can do it, sure, but your best bet is getting somewhere safe and spending a few days in a soft, warm bed. Of course, debilities are both descriptive and prescriptive: if something happens that would remove a debility, that debility is gone.</p>
 <p>Debilities don’t replace descriptions and using the established fiction. When someone loses an arm that doesn’t mean they’re Weak, it means they have one less arm. Don’t let debilities limit you. A specific disease can have whatever effects you can dream up. Sick is just a convenient shorthand for some anonymous fever picked up from a filthy rat.</p>
-<h2>Magic</h2>
+<hr/>
+
+
+<h2>魔法 (Magic)</h2>
 <p class="NoIndent">Dungeon World is a fantastic place: there’s more to it than mud, blood, and ale in the tavern. Fire and wind conjured from the pure elements. Prayers for health, might, and divine retribution. “Magic” is the name given to those abilities not derived from the strength of man and beast but from forces beyond.</p>
 <p>Magic means many things. The druid’s ability to take the shape of an animal is magic, as are the practiced effects of the wizard and the divine blessings of the cleric. Any ability that goes beyond the physically possible is magical.</p>
 <h3>Spells</h3>
@@ -217,7 +238,10 @@
 <p>Even if a spellcaster knows a spell, they must have it prepared before they can cast it. With some time and concentration, as described in the Commune and Prepare moves, the spellcaster may choose known spells whose total levels are less than or equal to the caster’s level plus 1 to prepare. The wizard always prepares their cantrips; the cleric always prepares their rotes. A prepared spell is ready to be cast.</p>
 <p>Casting a spell involves calling on a deity, chanting, waving ones hands, invoking mystical forces, and so on. To cast a spell you will usually make the cast a spell move. On a 10+ the spell takes effect, on a 7–9 the caster finds themself in trouble and must make a choice, but the spell is still cast. Some spells are ongoing—once they’re cast they continue to have effect until something ends it.</p>
 <p>One option on a 7–9 result is to have the spell revoked or forgotten. A spell that is revoked or forgotten is still known, but no longer prepared, and therefore no longer castable. When the caster next Prepares or Communes they may choose the same spell again.</p>
-<h2>Character Change</h2>
+<hr/>
+
+
+<h2>角色成長 (Character Change)</h2>
 <p class="NoIndent">Dungeon World is ever-changing. The characters change, too. As their adventures progress, player characters gain experience (XP), which lets them level up. This prepares them for greater danger, bigger adventures, and mightier deeds.</p>
 <p>Advancement, like everything else in Dungeon World, is both prescriptive and descriptive. Prescriptive means that when a player changes their character sheet the character changes in the fiction. Descriptive means that when the character changes in the fiction the player should change the character sheet to match.</p>
 <p>This isn’t a benefit or detriment to the players or the GM; it’s not an excuse to gain more powers or take them away. It’s just a reflection of life in Dungeon World.</p>
@@ -239,7 +263,10 @@
 <li>Take on an apprentice</li>
 <li>Change entirely to a new class</li></ul>
 <p class="NoIndent">If you retire you create a new character to play instead and work with the GM to establish your place in the world. If you take on an apprentice you play a new character (the apprentice) alongside your current character, who stops gaining XP. Changing classes means keeping your ability scores, race, HP, and whatever moves you and the GM agree are core to who your character is. You lose all other class moves, replacing them with the starting moves of your new class.</p>
-<h2>Bonds</h2>
+<hr/>
+
+
+<h2>羈絆 (Bonds)</h2>
 <p class="NoIndent">Bonds are what make you a party of adventurers, not just a random assortment of people. They’re the feelings, thoughts, and shared history that tie you together. You will always have at least one bond, and you’ll often have more.</p>
 <p>Each bond is a simple statement that relates your character to another player character. Your class gives you a few to start with, you’ll replace your starting bonds and gain new ones through play.</p>
 <h3>Resolving Bonds</h3>
@@ -254,7 +281,10 @@
 <p class="Example">Valeria’s kindness to the Gnomes of the Vale has swayed my heart, I will prove to her I am not the callous fiend she thinks I am.</p>
 <p class="Example">Xotoq won the Bone-and-Whispers Axe through trickery! It will be mine, I swear it.</p>
 <p class="NoIndent">These new bonds are just like the old ones—use them, resolve them, replace them.</p>
-<h2>Alignment</h2>
+<hr/>
+
+
+<h2>陣營 (Alignment)</h2>
 <p class="NoIndent">Alignment is your character’s way of thinking and moral compass. For the character, this can be an ethical ideal, religious strictures, or maybe just a gut instinct. It reflects the things your character might aspire to be and can guide you when you’re not sure what to do next. Some characters might proudly proclaim their alignment while others might hide it away. A character might not say, “I’m an evil person,” but may instead say, “I put myself first.” That’s all well and good for a character, but the world knows otherwise. Buried deep down inside is the ideal self a person wants to become—it is this mystic core that certain spells and abilities tap into when detecting someone’s alignment. Every sentient creature in Dungeon World bears an alignment, be they an elf, a human, or some other, stranger thing.</p>
 <p>The alignments are Good, Lawful, Neutral, Chaotic, and Evil. Each one shows an aspiration to be a different type of person.</p>
 <p>Lawful creatures aspire to impose order on the world, either for their own benefit or for that of others. Chaotic creatures embrace change and idealize the messy reality of the world, prizing freedom above all else. Good creatures seek to put others before themselves. Evil creatures put themselves first at the expense of others.</p>
@@ -292,7 +322,10 @@
 <li>Destroy something beautiful</li>
 <li>Upset the rightful order</li>
 <li>Harm an innocent</li></ul>
-<h2>Hirelings</h2>
+<hr/>
+
+
+<h2>僱工 (Hirelings)</h2>
 <p class="NoIndent">Hirelings are those sorry souls that—for money, glory, or stranger needs—venture along with adventurers into the gloom and danger. They are the foolhardy that seek to make their name as adventurers.</p>
 <p>Hirelings serve a few purposes. To the characters, they’re the help. They lend their strength to the player characters’ efforts in return for their pay. To the players, they’re a resource. They buy the characters some extra time against even the most frightening of threats. They’re also replacement characters, waiting to step up into the hero’s role when a player character falls. To the GM, they’re a human face for the characters to turn to, even in the depths of the earth or the far reaches of the planes.</p>
 <p>Hirelings are not heroes. A hireling may become a hero, as a replacement character, but until that time they’re just another GM character. As such their exact HP, armor, and damage aren’t particularly important. A hireling is defined by their <strong>Skill</strong> (or Skills) a <strong>Cost</strong> and a <strong>Loyalty</strong> score.</p>
@@ -301,7 +334,9 @@
 <p>No hireling works for free. The hireling’s cost is what it takes to keep them with the player characters. If the hireling’s cost isn’t paid regularly (usually once a session) they’re liable to quit or turn on their employers.</p>
 <p>When hirelings are in play, the players may have to make the Order Hirelings move. The move uses the loyalty of the hireling that triggered the move:</p>
 <p class="MoveOneLine">Hirelings do what you tell them to, so long as it isn’t obviously dangerous, degrading, or stupid, and their cost is met. <strong>When a hireling find themselves in a dangerous, degrading, or just flat-out crazy situation due to your orders</strong> roll+loyalty. On a 10+ they stand firm and carry out the order. On a 7–9 they do it for now, but come back with serious demands later. Meet them or the hireling quits on the worst terms.</p>
-<h2>Making a Hireling</h2>
+
+
+<h2>創造一名僱工 (Making a Hireling)</h2>
 <p class="NoIndent">Hirelings are easy to make on the fly. When someone enters the players’ employ note down their name and what cost they’ve agreed to as well as any skills they may have.</p>
 <p>Start with a number based on where the hireling was found. Hirelings in villages start with 2–5. Town hirelings get 4–6. Keep hirelings are 5–8. City hirelings are 6–10. Distribute the hireling’s number between loyalty, a main skill, and zero or more secondary skills. Starting loyalty higher than 2 is unusual, as is starting loyalty below 0. Choose a cost for the hireling and you’re done.</p>
 <p>A hireling’s stats, especially their loyalty, may change during play as a reflection of events. A particular kindness or bonus from the players is worth +1 loyalty forward. Disrespect is -1 loyalty forward. If it’s been a while since their cost was last paid they get -1 loyalty ongoing until their cost is met. A hireling's loyalty may be permanently increased when they achieve some great deed with the players. A significant failure or beating may permanently lower the hireling’s loyalty.</p>
@@ -338,7 +373,10 @@
 <h4>Warrior</h4>
 <p class="NoIndent">Warriors are not masters of combat, but they are handy with a weapon.</p>
 <p><em>Man-at-arms</em>—When you deal damage while a warrior aids you add their skill to the damage done. If your attack results in consequences (like a counter attack) the man-at-arms takes the brunt of it.</p>
-<h2>The Adventurer’s Life</h2>
+<hr/>
+
+
+<h2>冒險者的生活 (The Adventurer’s Life)</h2>
 <p class="NoIndent">Now you know the basics. It’s time you found out what the adventurer’s life is really like. They say it’s all gold and glory. That’s sometimes true, but sometimes it also means digging through otyugh waste for a chance at one more gold coin.</p>
 <h3>Dungeons</h3>
 <p class="NoIndent">As an adventurer you’ll spend a lot of time in dungeons. The word “dungeon” conjures up an image of the stony halls under a castle where prisoners are kept, but a dungeon is really any place filled with danger and opportunity. A dragon’s cave, an enemy camp, a forgotten sewer, a sky castle, the very foundations of the world.</p>
