--- a/character_creation/index.html
+++ b/character_creation/index.html
@@ -117,31 +117,31 @@
 <p>
   你創造角色所需要的大部分資訊都被記在角色卡上。下列的步驟將帶領你依序填妥角色卡上的內容。</p>
 
-<h2>1. 選擇職業 (Choose a Class)</h2>
+<h2>1. 選擇職業</h2>
 <p>查看所有的角色職業，並從中選擇一個你感興趣的職業。讓每個玩家選擇不同的職業；一場遊戲中可不能同時出現兩名法師。如果有兩個玩家想要選擇同一個的職業，請他們像成熟大人一樣好好討論並協商。</p>
 <p class="Example">
   我和保羅以及夏農坐在一起，準備遊玩約翰所主持的遊戲。我腦中有一些關於法師的好點子，所以我表示這個職業會是我的第一選擇。沒有其他人想扮演法師，所以我直接拿走法師的角色卡。</p>
 
-<h2>2. 選擇種族 (Choose a Race)</h2>
+<h2>2. 選擇種族</h2>
 <p>有些職業會提供種族的選項。從中選擇一個。你的種族將給你一個特殊動作。</p>
 <p class="Example">
   我喜歡更靈活一些──能有更多的法術總是好的，對吧？所以我選擇人類，它可以讓我選擇一個牧師法術，並把它當作法師法術來施展。這麼一來夏農的牧師就可以放手施放那些治療法術了。</p>
 
-<h2>3. 選擇角色名稱 (Choose a Name)</h2>
+<h2>3. 選擇角色名稱</h2>
 <p>從列表中選擇角色的名稱。</p>
 <p class="Example">亞文聽起來不錯。</p>
 
-<h2>4. 選擇外觀 (Choose Look)</h2>
+<h2>4. 選擇外觀</h2>
 <p>外觀代表著你身體的外貌特徵，從每個列表中各自選擇一項。</p>
 <p class="Example">
   「著魔的眼神」聽起來不錯，因為每個法師都曾見識過那些凡人不應見的事物。沒有任何一個稱職的好法師會有時間整理頭髮，所以他會有一頭「雜亂的頭髮」。我的長袍非常「古怪」，我跟大家提到，我認為這件長袍或許是作為召喚儀式的一環從遙遠異界中被召喚出來的。因為埋首研究閱讀而沒有時間吃飯，所以我的角色有著「消瘦的身體」。</p>
 
-<h2>5. 選擇屬性值 (Choose Stats)</h2>
+<h2>5. 選擇屬性值</h2>
 <p>將以下數值分配到你的六個屬性中：16, 15, 13, 12, 9, 8。首先查看所有的基本動作和你職業的起始動作。從中選擇一個你最感興趣的動作：某個你將最常去做，或者最擅長的事情。將 16 分配到該動作所使用的屬性上。再查看一次動作列表，選擇次一個對你的角色而言最重要的動作（也許是某個輔助你第一個選擇的行動）。將你的 15 分配到該動作所使用的屬性上。重複這個過程，直到你將所有剩下的數值分配完畢。</p>
 <p class="Example">
   看起來我會需要智力屬性來<b>施放法術</b>，而這正是我的首選，因此我把 16 分配給智力。<b>面對危險</b>中跟敏捷有關的選項看起來很像是我在閃躲法術時會去做的事情，因此我把 15 分配給敏捷。13 點的睿知可以幫助我注意到重要的細節（且根據<b>面對危險</b>動作的效果，它或許還能幫助我保持理智）。魅力可能會在我與召喚生物打交道時派上用場，因此我把 12 分配給它。活下來永遠是件好事，因此我把9分配給體質以獲得一些額外的生命值。最後，我把 8 分配給力量屬性。</p>
 
-<h2>6. 算出調整值 (Figure Out Modifiers)</h2>
+<h2>6. 算出調整值</h2>
 <p>接下來你需要算出每個屬性的調整值。當某個動作寫著+敏捷 或+魅力 時，所使用的正是該屬性對應的調整值。如果你使用的是標準角色紙，則調整值就已經列在各數值旁邊。</p>
 <table class="table">
    <tbody>
@@ -207,38 +207,38 @@
       </tr>
     </tbody>
  </table>
-<h2>7. 決定最大生命值 (Set Maximum HP)</h2>
+<h2>7. 決定最大生命值</h2>
 <p>你的最大生命值等於你職業的基礎生命值 + 體質值。你的起始生命值等同你的最大生命值。</p>
 <p class="Example">基礎的 4 點加上 9 點的體質值，給了我總共 13 點生命值。</p>
 
-<h2>8. 選擇起始動作 (Choose Starting Moves)</h2>
+<h2>8. 選擇起始動作</h2>
 <p>每個職業的角色卡正面都會列出它們各自的起始動作。有些職業，比如說戰士，所擁有的某些起始動作會需要玩家進行一些選擇，請在這個時候做好決定。法師會需要選擇法術來記入他的法術書中。牧師和法師也都需要事先選擇他們在遊戲開始時已經準備好的法術。</p>
 <p class="Example">
   <em>召喚系</em>的法術是個必然的選擇，因此我選了<b>接觸靈體(Contact Spirits)</b>法術。相比法師職業原本那可悲的 d4傷害骰，<b>魔法飛彈(Magic Missile)</b>能讓我造成更多的傷害，所以我也選了這個法術。我選擇<b>警報術(Alarm)</b>作為我最後的法術，因為我已經想到了一些關於這個法術的有趣用法。</p>
 
-<h2>9. 選擇陣營 (Choose Alignment)</h2>
+<h2>9. 選擇陣營</h2>
 <p> 你的陣營是一段描述著你角色道德觀的簡短字句。每個職業只能從某些特定陣營中選擇。從中選擇你的陣營──這能讓你的角色在遊戲中做出特定行動時，讓你獲得額外的經驗值。</p>
 <p class="Example">
   法師中立陣營的選項中寫說，當我發掘一個魔法奧秘時我能夠獲得額外的經驗值。亞文終其一生都在挖掘神秘──所以我選擇了中立陣營。</p>
 
-<h2>10. 選擇裝備 (Choose Gear)</h2>
+<h2>10. 選擇裝備</h2>
 <p>每個職業都會提供幾個選項讓你決定你的起始裝備。謹記你角色的負載上限──它會限制你能夠攜帶多少東西。也記得加上你防具的重量，算出總重後，將其記錄在你的角色卡上。</p>
 <p class="Example">
   我有點擔心我的生命值，所以我選擇了護甲而非書本。匕首聽起來挺適合用來施展儀式的，因此我選了它而不是法杖。治療藥水和解毒劑之間的選擇有些難以定奪，但最終還是由治療藥水勝出。最後，我也帶了些口糧在身上。</p>
 
-<h2>11. 介紹你的角色 (Introduce Your Character)</h2>
+<h2>11. 介紹你的角色</h2>
 <p>現在你知道你的角色是什麼樣的人，是時候把他介紹給其他人認識了。等到所有人都選好了名稱後，順著桌子的順序輪流介紹；當輪到你的時候，介紹你角色的外觀、職業、和其他所有關於你角色的事情。根據你的喜好，你可以選擇告訴大家你的陣營，也可以選擇保持神祕。</p>
 <p>這也同時是讓GM發問的時間。GM所提出的問題應該要能夠幫助角色們建立與彼此的關係（「你怎麼看待這件事？」），並把整個團隊帶到冒險中（「這是否代表你們之前曾經見過格倫洛克？」）。GM必須仔細聆聽每個人所說的內容，並對任何出眾的內容提出疑問。搞清楚他們來自何方、他們是什麼人、他們是如何聚在一起、或其他看起來事關重大或有趣的事情。</p>
 <p class="Example">
   「這是亞文，一名強大的法師！他是個人類，有著一雙著魔的雙眼、雜亂的頭髮、古怪的長袍、以及消瘦的身體。就像我剛說的，他身上的長袍古怪異常，因為那並不是來自這個世界的：作為召喚儀式的一環，這件長袍被召喚到了他身邊。」</p>
 
-<h2>12. 選擇羈絆 (Choose Bonds)</h2>
+<h2>12. 選擇羈絆</h2>
 <p>當所有人都介紹過他們的角色，你就可以開始選擇你的羈絆。你必須填寫至少一個羈絆，但為了你的利益著想，你最好還是多填寫一些。在每格空欄中填入一名角色的名稱。你可以將同一個角色填入一個以上的羈絆敘述中。</p>
 <p>花點時間跟其他人討論羈絆的內容，並在決定好之後讓GM提出與羈絆有關的問題。你們會希望反覆進行這個過程，以確保每個人都對這個羈絆的結果感到滿意和舒適，同樣的，為每個羈絆留下一些能在遊戲中發掘其意義的空間：不要一開始就事先決定好所有細節。一旦所有人都填妥了各自的羈絆，就把它們大聲地唸給大家聽。當某個動作要求你擲+羈絆時，計算你所擁有的與該角色有關的羈絆的數量，並將之加入擲骰結果中。</p>
 <p class="Example">
   在大家都介紹完後，我接著要選擇把角色填入各個羈絆之中。我可以選擇的角色有：保羅的戰士葛瑞格、以及夏農的牧師布林頓。關於預言的這條羈絆聽起來很有趣，所以我選擇把葛瑞格填入其中，寫成這樣「我預見了，葛瑞格將在即將到來的事件中扮演重要的角色！」。曾經接觸遙遠異界之物的法師感覺和牧師會互相看不對眼，因此我把夏農的角色填入，並得到「布林頓對於世界有著可悲的誤解；我將盡我所能的教導他」。我把我最後的羈絆留白，我打算之後再處理它。一旦所有人都完工，我大聲唸出我的羈絆，接著跟大家一起討論它們的意義：為什麼我們會一起行動？我們又將前往何方？</p>
 
-<h2>13. 準備好開始遊戲 (Get Ready to Play)</h2>
+<h2>13. 準備好開始遊戲</h2>
 <p>
   稍微休息一下：拿杯飲料、伸展四肢，並讓GM稍微動腦整合一下關於你們角色的情報。一旦所有人都準備好，拿起你的骰子和角色卡，準備好前往地城冒險吧。</p>
 <p>
